--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.css">
   <link rel="stylesheet" href="app.css">
   <title>Angular 2 Test Osama&Akram</title>
+  <script src="js/app.js" type="text/javascript"></script>
 </head>
 <body ng-app="MyResume" layout="column">
   <div>
